@@ -34,6 +34,7 @@ depth: 1
  * Remove unused WorkflowStatus view, urlpattern, and workflow-status.js (Storm Heg)
  * Add support for options/attrs in Telepath widgets so that attrs render on the created DOM (Storm Heg)
  * Update pre-commit hooks to be in sync with latest changes to Eslint & Prettier for client-side changes (Storm Heg)
+ * Add `WagtailTestUtils.get_soup()` method to get a `BeautifulSoup` object from an `HttpResponse` object (Storm Heg)
 
 
 ## Upgrade considerations - changes affecting all projects
